--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ authors = ["tvall <tvall43@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-serenity = { default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
+serenity = { default-features = false, features = ["client", "gateway", "rustls_backend", "model"], git = "https://github.com/serenity-rs/serenity", branch = "current"}
 tokio = "0.2.22"
